@@ -83,6 +83,9 @@ What's new in Sudo 1.8.15
    to the group plugin.  Previously, unknown system groups were
    always passed to the group plugin.
 
+ * When creating a new file, sudoedit will now check that the file's
+   parent directory exists before running the editor.
+
 What's new in Sudo 1.8.14p3
 
  * Fixed a bug introduced in sudo 1.8.14p2 that prevented sudo
